--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     // Add a click event to the save button
     document.getElementById("saveButton").addEventListener("click", saveFile);
 
-    // Automatically press the save button every 20 seconds
-    setInterval(saveFile, 20000); // 20000ms = 20 seconds
+    // Automatically press the save button every 2 minutes
+    setInterval(saveFile, 180000); 
   </script>
 </body>
 </html>
