--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   <!-- Embed Photopea -->
-  <iframe id="photopea" src="https://www.photopea.com"></iframe>
+  <iframe id="photopea" src="https://www.photopea.com" allowfullscreen></iframe>
 
   <!-- Save Button (hidden) -->
   <button id="saveButton">Save Document</button>
@@ -46,7 +46,7 @@
     document.getElementById("saveButton").addEventListener("click", saveFile);
 
     // Automatically press the save button every 2 minutes
-    setInterval(saveFile, 180000);
+    setInterval(saveFile, 180000); 
 
     // Layout adjustment based on mouse movement
     const qSel = sel => document.querySelector(sel);
@@ -61,42 +61,6 @@
         qSel('.panelhead').style.maxWidth = qSel('.pbody').parentNode.style.width = width + 'px';
       });
     }, 500);
-
-    // Function to toggle fullscreen
-    function toggleFullScreen() {
-      if (!document.fullscreenElement &&      // Check if fullscreen is not already active
-          !document.mozFullScreenElement &&   // For Firefox
-          !document.webkitFullscreenElement && // For Chrome and Safari
-          !document.msFullscreenElement) {   // For Internet Explorer/Edge
-        if (document.documentElement.requestFullscreen) {
-          document.documentElement.requestFullscreen();
-        } else if (document.documentElement.mozRequestFullScreen) { // Firefox
-          document.documentElement.mozRequestFullScreen();
-        } else if (document.documentElement.webkitRequestFullscreen) { // Chrome and Safari
-          document.documentElement.webkitRequestFullscreen();
-        } else if (document.documentElement.msRequestFullscreen) { // IE/Edge
-          document.documentElement.msRequestFullscreen();
-        }
-      } else {
-        if (document.exitFullscreen) {
-          document.exitFullscreen();
-        } else if (document.mozCancelFullScreen) { // Firefox
-          document.mozCancelFullScreen();
-        } else if (document.webkitExitFullscreen) { // Chrome and Safari
-          document.webkitExitFullscreen();
-        } else if (document.msExitFullscreen) { // IE/Edge
-          document.msExitFullscreen();
-        }
-      }
-    }
-
-    // Add event listener for F11 key to toggle fullscreen
-    document.addEventListener('keydown', function(event) {
-      if (event.key === 'F11') {
-        event.preventDefault(); // Prevent default F11 behavior
-        toggleFullScreen(); // Toggle fullscreen
-      }
-    });
   </script>
 </body>
 </html>
