--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Photopea Save Example</title>
+  <title>Photopea</title>
   <style>
     /* Remove default margin and padding, and set the body to occupy the full viewport */
     body, html {
