--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     // Add a click event to the save button
     document.getElementById("saveButton").addEventListener("click", saveFile);
 
-    // Automatically press the save button every 2 minutes
-    setInterval(saveFile, 120000); 
+    // Automatically press the save button
+    setInterval(saveFile, 60000); 
   </script>
 </body>
 </html>
